# b2d2

./: Cargo.toml  README.md
src/: main.rs  models.rs  pdf.rs
src/static/: index.html
